# AI-Enhanced-Lock-Security-System

./: README.md  device.cpp  pyproject.toml
facial_recognition_technology/: image_capture.py  inference.py
microcontroller/: platformio.ini
microcontroller/src/: main.cpp
