[project]
name = "facial_recognition_technology"
version = "1.0.0"
description = ""
authors = [
    {name = "Bryan Galecio",email = "bryangalecio2004@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "face-recognition (>=1.3.0,<2.0.0)",
    "imutils (>=0.5.4,<0.6.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"